# arm-arc-agi

./: .env.example  .envrc  .flake8  .gitignore  .gitmodules  README.md  evaluate.py  evaluate_checkpoint.py  pretrain.py  pretrain_support_ttt_supervised_reptile.py  pretrain_ttt.py  puzzle_dataset.py  pyproject.toml  train.py
config/: cfg_pretrain.yaml
config/arch/: hrm_softprompt.yaml  hrm_softprompt_2d_rope.yaml  trm.yaml  trm_abstraction.yaml  trm_abstraction_support_ttt_emp64_supervised_reptile.yaml
experiments/abl-c3-trmopt/checkpoints/: all_config.yaml  trm.py  wandb_run_id.txt
experiments/abl-v1-noh/checkpoints/: all_config.yaml  losses.py  trm_abstraction.py  (+1 more)
scripts/: dataset.sh  install.sh
scripts/dataset/: arc-agi-1-base.sh  arc-agi-1-concept.sh  arc-agi-2-base.sh  arc-agi-2-concept.sh  arc-agi-2-softprompt.sh  dataset-arc-agi-2.sh  dataset-arc-agi.sh
scripts/experiments/: set-up-experiment.sh
utils/: __init__.py  functions.py  logging.py  wandb_export.py
utils/dataset/: __init__.py  build_arc_agi_1_concept_4_dataset.py  build_arc_agi_1_dataset.py  build_arc_agi_2_concept_4_dataset.py  build_arc_agi_2_dataset.py  build_arc_dataset.py  build_arc_support_ttt_dataset.py  build_dataset.py  build_rearc_dataset.py  build_sudoku_dataset.py  common.py  puzzle_dataset.py
utils/evaluators/: __init__.py  arc.py
utils/model/: __init__.py  embedding.py  layers.py  losses.py
utils/models/: __init__.py  fsq_embedding.py  layers.py  layers_optimized.py  losses.py  sparse_embedding.py
utils/tests/: __init__.py  test_arc_agi_2_order_dataset.py
(+60 files in other folders)
